# SENTIMENT_ANALYSIS_DASHBOARD

./: .env-template  .env.example  .gitignore  .renderignore  CONTRIBUTING.md  Dockerfile  Procfile  README.md  app.py  apt-packages  build.sh  data_collector.py  dependencies.txt  deploy.sh  docker-compose.yml  gunicorn_config.py  pyproject.toml  render-build.sh  render.yaml  render.yaml.bak  requirements.txt  sentiment_analyzer.py  setup.py
static/: app.js  styles.css
static/css/: style.css
static/js/: dashboard.js
templates/: index.html
