[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sentiment-analysis-dashboard"
version = "0.1.0"
description = "Real-time sentiment analysis dashboard using BERT and Flask"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
flask = "2.0.1"
tweepy = "4.10.0"
praw = "7.6.0"
transformers = "4.18.0"
torch = ">=2.2.0"
plotly = "5.10.0"
pandas = "1.4.2"
nltk = "3.7"
flask-socketio = "5.1.1"
python-dotenv = "0.20.0"
werkzeug = "2.0.1"
gunicorn = "20.1.0"
tokenizers = "0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0" 